2015-07-08 (0.0.2)  Michael Callahan
        * Wrote bulk of module.

2015-07-08 (0.0.1)  Michael Callahan
        * Initial Commit of default files etc.