@@ -1,11 +1,0 @@
-# params.pp
-# Set up proxies parameters defaults etc.
-
-# This class and variable allows you to set the actual http proxy.
-class httpproxy::params {
-  #### init vars ####
-  $http_proxy = undef
-  $http_proxy_port = undef
-  $ensure = present
-
-}
